kanc/src/tests/sample_code/should_fail/single_file/ast_simplification/labeled_match_case_params/underscore_label/implicit_underscore_label.k
type Nat {
    .o: Nat,
    .s(pred~n: Nat): Nat,
}

let pred = fun _(x: Nat): Nat {
    match x {
        .o => Nat.o,
        .s(:_) => x,
    }
};
